# Yalantiss_test_task

./: .dockerignore  .pre-commit-config.yaml  README.md  pyproject.toml
app/: __init__.py  api.py  models.py  production.ini  swagger.py  wsgi_wrapper.py
app/static/: swagger.json
core/: process_courses.py
docker/: Dockerfile  docker-compose.yml  nginx.conf  run_app.sh
test/api/: conftest.py  test_api.py
