[tool.poetry]
name = "flaskproject"
version = "0.1.0"
description = ""
authors = ["@lex Tarasov <tarasov.oleksander@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"

[tool.poetry.dev-dependencies]
black = "21.4b1"
isort = "5.8.0"
flake8 = "3.9.1"
pre-commit-hooks = "3.4.0"
mypy = "0.812"
pylint = "^2.8.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
