[tool.poetry]
name = "flaskproject"
version = "0.1.0"
description = ""
authors = ["@lex Tarasov <tarasov.oleksander@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"

[tool.poetry.dev-dependencies]
black = "21.4b1"
isort = "5.8.0"
flake8 = "3.9.1"
pre-commit-hooks = "3.4.0"
mypy = "0.812"
pylint = "^2.8.2"
pre-commit = "^2.12.1"

[tool.isort]
multi_line_output = 4
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.flake8]
max-line-length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
